Fix z-index

--- a/assets/css/logo.css
+++ b/assets/css/logo.css
@@ -2,7 +2,7 @@
   position: absolute;
   right: 0;
   bottom: 0;
-  z-index: 10;
+  z-index: 2147483647;
 }
 
 #zssr-logo a {
